[Fix] Ajuste no docker compose

--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,6 @@
-DB_HOST= "Nome Host Banco de Dados"
-DB_NAME= "Nome do Banco"
-DB_USER= "Usuario do Banco"
-DB_ROOT_PASSWORD= "Senha do Banco" 
+DB_HOST= "db"
+DB_NAME= "wordpress"
+DB_USER= "wordpress"
+DB_ROOT_PASSWORD= "wordpress" 
 APP_ENV=dev
-IP= "Ip Localhost da máquina"
+IP= "Ip Local PC"
