--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 
 services:
   wp:
@@ -24,11 +24,6 @@ services:
     env_file: .env
     ports:
       - ${IP}:3306:3306
-    command: [
-      '--default_authentication_plugin=mysql_native_password',
-      '--character-set-server=utf8mb4',
-      '--collation-server=utf8mb4_unicode_ci'
-    ]
     volumes:
       - ./wp-data:/docker-entrypoint-initdb.d
       - db_data:/var/lib/mysql
@@ -46,11 +41,20 @@ services:
     env_file: .env
     restart: unless-stopped
     ports:
-      - 8100:8080
-      - 443:443
+      - 8111:8080
+      - 8112:443
     volumes:
       - ./wp-app:/var/www/html
       - ./config/nginx.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - theme
+
+  adminer:
+    image: adminer
+    container_name: adminer-theme
+    restart: always
+    ports:
+      - 8888:8080
     networks:
       - theme
 
